--- a/.github/workflows/release-build.yml
+++ b/.github/workflows/release-build.yml
@@ -169,6 +169,7 @@ jobs:
             verify: true
     steps:
       - uses: grafana/shared-workflows/actions/dockerhub-login@dockerhub-login/v1.0.2
+      - uses: grafana/shared-workflows/actions/login-to-gar@main
       - uses: actions/checkout@v5
         with:
           persist-credentials: false
@@ -187,6 +188,7 @@ jobs:
           output: artifacts-${{ matrix.name }}.txt
           verify: ${{ matrix.verify }}
           build-id: ${{ github.run_id }}
+          cache-builders: true
       - uses: actions/upload-artifact@330a01c490aca151604b8cf639adc76d48f6c5d4
         with:
           name: artifacts-list-${{ matrix.name }}
