chore: add circular dependencies linter

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "lint:sass": "yarn stylelint '{public/sass,packages}/**/*.scss' --cache",
     "lint:fix": "yarn lint:ts --fix",
     "lint:prune": "yarn lint:ts --prune-suppressions",
+    "lint:circular": "madge --circular --extensions ts,tsx --no-count --no-spinner .",
     "packages:build": "nx run-many -t build --projects='tag:scope:package'",
     "packages:clean": "rimraf ./npm-artifacts && nx run-many -t clean --projects='tag:scope:package' --maxParallel=100",
     "packages:i18n-extract": "nx run-many -t i18n-extract --projects='tag:scope:package'",
@@ -222,6 +223,7 @@
     "jimp": "^1.6.0",
     "jsdom-testing-mocks": "^1.13.1",
     "lerna": "9.0.3",
+    "madge": "^8.0.0",
     "mini-css-extract-plugin": "2.9.2",
     "msw": "2.10.4",
     "mutationobserver-shim": "0.3.7",
