--- a/.github/workflows/frontend-lint.yml
+++ b/.github/workflows/frontend-lint.yml
@@ -208,30 +208,37 @@ jobs:
         persist-credentials: false
     - name: Setup Node
       uses: ./.github/actions/setup-node
+    - name: Install dependencies
+      run: yarn install --immutable
     - name: Check circular dependencies on PR
-      # the first sed command is used to clean yarn dlx stuff from output
+      # the first sed command is used to clean the output
       run: |
-        yarn dlx madge@8.0.0 --circular --extensions ts,tsx --no-count --no-spinner . &> /tmp/pr-circular.txt || true
-        sed -n '/.*Found \([0-9]*\) circular dependencies!$/,$p' /tmp/pr-circular.txt > /tmp/pr-circular-clean.txt
+        yarn lint:circular &> /tmp/pr-circular.txt || true
+        sed -n '/.*Found \([0-9]*\) circular.*/,$p' /tmp/pr-circular.txt > /tmp/pr-circular-clean.txt
         echo "Circular dependencies on PR:"
-        pr_count=$(sed -n 's/.*Found \([0-9]*\) circular dependencies!$/\1/p' /tmp/pr-circular-clean.txt)
+        pr_count=$(sed -n 's/.*Found \([0-9]*\) circular.*/\1/p' /tmp/pr-circular-clean.txt)
         echo "$pr_count"
-    - name: Fetch main branch
-      # Making sure we compare with main in the grafana/grafana repo for PRs in forks
-      run: git fetch https://github.com/${{ github.repository }} main:main --depth=1
+    - name: Checkout main branch
+      uses: actions/checkout@v5
+      with:
+        persist-credentials: false
+        ref: 'main'
+    - name: Setup Node
+      uses: ./.github/actions/setup-node
+    - name: Install dependencies
+      run: yarn install --immutable
     - name: Check circular dependencies on main
-      # the first sed command is used to clean yarn dlx stuff from output
+      # the first sed command is used to clean the output
       run: |
-        git checkout main
-        yarn dlx madge@8.0.0 --circular --extensions ts,tsx --no-count --no-spinner . &> /tmp/main-circular.txt || true
-        sed -n '/.*Found \([0-9]*\) circular dependencies!$/,$p' /tmp/main-circular.txt > /tmp/main-circular-clean.txt
+        yarn lint:circular &> /tmp/main-circular.txt || true
+        sed -n '/.*Found \([0-9]*\) circular.*/,$p' /tmp/main-circular.txt > /tmp/main-circular-clean.txt
         echo "Circular dependencies on main:"
-        main_count=$(sed -n 's/.*Found \([0-9]*\) circular dependencies!$/\1/p' /tmp/main-circular-clean.txt)
+        main_count=$(sed -n 's/.*Found \([0-9]*\) circular.*/\1/p' /tmp/main-circular-clean.txt)
         echo "$main_count"
     - name: Compare circular dependencies
       run: |
-        main_count=$(sed -n 's/.*Found \([0-9]*\) circular dependencies!$/\1/p' /tmp/main-circular-clean.txt)
-        pr_count=$(sed -n 's/.*Found \([0-9]*\) circular dependencies!$/\1/p' /tmp/pr-circular-clean.txt)
+        main_count=$(sed -n 's/.*Found \([0-9]*\) circular.*/\1/p' /tmp/main-circular-clean.txt)
+        pr_count=$(sed -n 's/.*Found \([0-9]*\) circular.*/\1/p' /tmp/pr-circular-clean.txt)
         echo "Main branch circular dependencies: $main_count lines"
         echo "PR branch circular dependencies: $pr_count lines"
         if [ "$pr_count" -gt "$main_count" ]; then
