--- a/.github/workflows/frontend-lint.yml
+++ b/.github/workflows/frontend-lint.yml
@@ -222,6 +222,7 @@ jobs:
       uses: actions/checkout@v5
       with:
         persist-credentials: false
+        repository: 'grafana/grafana'
         ref: 'main'
     - name: Setup Node
       uses: ./.github/actions/setup-node
