ci: support vendoring code

--- a/.github/actions/change-detection/action.yml
+++ b/.github/actions/change-detection/action.yml
@@ -65,6 +65,7 @@ runs:
             - 'go.sum'
             - 'go.work'
             - 'go.work.sum'
+            - 'vendor/**'
             - '**.go'
             - 'pkg/**'
             - '!pkg/**.md'
