--- a/.github/workflows/go-lint.yml
+++ b/.github/workflows/go-lint.yml
@@ -72,3 +72,17 @@ jobs:
           args: |
             --verbose $(go list -m -f '{{.Dir}}' | xargs -I{} sh -c 'test ! -f {}/.nolint && echo {}/...')
           install-mode: binary
+
+  go-work-vendor:
+    needs: detect-changes
+    if: needs.detect-changes.outputs.changed == 'true'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v6
+        with:
+          persist-credentials: false
+      - uses: actions/setup-go@v6.0.0
+        with:
+          go-version-file: ./go.mod
+      - run: go work vendor
+      - run: git diff --exit-code --quiet ./vendor/
