--- a/pkg/tests/apis/playlist/testdata/playlist-generate.yaml
+++ b/pkg/tests/apis/playlist/testdata/playlist-generate.yaml
@@ -1,4 +1,4 @@
-apiVersion: playlist.grafana.app/v0alpha1
+apiVersion: playlist.grafana.app/v1
 kind: Playlist
 metadata:
   generateName: x # anything is ok here... except yes or true -- they become boolean!
