--- a/public/app/plugins/datasource/cloud-monitoring/package.json
+++ b/public/app/plugins/datasource/cloud-monitoring/package.json
@@ -43,7 +43,7 @@
     "react-select-event": "5.5.1",
     "ts-node": "10.9.2",
     "typescript": "5.9.2",
-    "webpack": "5.101.0"
+    "webpack": "^5.105.0"
   },
   "peerDependencies": {
     "@grafana/runtime": "*"
