--- a/public/app/plugins/datasource/grafana-pyroscope-datasource/package.json
+++ b/public/app/plugins/datasource/grafana-pyroscope-datasource/package.json
@@ -37,7 +37,7 @@
     "style-loader": "4.0.0",
     "ts-node": "10.9.2",
     "typescript": "5.9.2",
-    "webpack": "5.101.0"
+    "webpack": "^5.105.0"
   },
   "peerDependencies": {
     "@grafana/assistant": "^0.1.1",
