fixes and canary

--- a/package.json
+++ b/package.json
@@ -295,8 +295,8 @@
     "@grafana/plugin-ui": "^0.12.1",
     "@grafana/prometheus": "workspace:*",
     "@grafana/runtime": "workspace:*",
-    "@grafana/scenes": "6.52.13",
-    "@grafana/scenes-react": "6.52.13",
+    "@grafana/scenes": "6.52.14--canary.1354.21819859661.0",
+    "@grafana/scenes-react": "6.52.14--canary.1354.21819859661.0",
     "@grafana/schema": "workspace:*",
     "@grafana/sql": "workspace:*",
     "@grafana/ui": "workspace:*",
