--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -968,6 +968,8 @@ playwright.storybook.config.ts @grafana/grafana-frontend-platform
 /public/app/features/panel/suggestions/ @grafana/dataviz-squad
 /public/app/features/playlist/ @grafana/dashboards-squad
 /public/app/features/plugins/ @grafana/grafana-frontend-platform
+/public/app/features/plugins/admin/ @grafana/plugins-platform-frontend
+/public/app/features/plugins/datasource_srv* @grafana/plugins-platform-frontend
 /public/app/features/profile/ @grafana/grafana-frontend-platform
 /public/app/features/runtime/ @ryantxu
 /public/app/features/query/ @grafana/dashboards-squad
