--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     "e2e:enterprise": "./e2e/start-and-run-suite enterprise",
     "e2e:enterprise:dev": "./e2e/start-and-run-suite enterprise dev",
     "e2e:enterprise:debug": "./e2e/start-and-run-suite enterprise debug",
-    "e2e:playwright": "NODE_OPTIONS='-C @grafana-app/source' yarn playwright test --grep-invert @cloud-plugins",
-    "e2e:playwright:debug": "NODE_OPTIONS='-C @grafana-app/source' yarn playwright test --debug -x --trace on",
+    "e2e:playwright": "NODE_OPTIONS='-C @grafana-app/source' yarn playwright test --grep-invert",
+    "e2e:playwright:debug": "yarn e2e:playwright -- --debug -x --trace on",
+    "e2e:playwright:10x": "yarn e2e:playwright -- --repeat-each=10",
     "e2e:playwright:cloud-plugins": "NODE_OPTIONS='-C @grafana-app/source' yarn playwright test --grep @cloud-plugins",
     "e2e:playwright:storybook": "NODE_OPTIONS='-C @grafana-app/source' yarn playwright test -c playwright.storybook.config.ts",
     "e2e:acceptance": "NODE_OPTIONS='-C @grafana-app/source' yarn playwright test --grep @acceptance",
