--- a/package.json
+++ b/package.json
@@ -241,7 +241,7 @@
     "ts-jest": "29.2.5",
     "ts-node": "10.9.2",
     "typescript": "5.7.3",
-    "webpack": "5.97.1",
+    "webpack": "^5.105.0",
     "webpack-assets-manifest": "^5.1.0",
     "webpack-cli": "6.0.1",
     "webpack-dev-server": "5.2.0",
