--- a/public/app/plugins/datasource/opentsdb/package.json
+++ b/public/app/plugins/datasource/opentsdb/package.json
@@ -1,43 +1,41 @@
 {
-  "name": "@grafana-plugins/jaeger",
-  "description": "Jaeger plugin for Grafana",
+  "name": "@grafana-plugins/opentsdb",
+  "description": "OpenTSDB plugin for Grafana",
   "private": true,
-  "version": "12.0.10",
+  "version": "12.4.0-pre",
   "dependencies": {
     "@emotion/css": "11.13.5",
     "@grafana/data": "workspace:*",
-    "@grafana/e2e-selectors": "workspace:*",
-    "@grafana/o11y-ds-frontend": "workspace:*",
-    "@grafana/plugin-ui": "0.10.5",
     "@grafana/runtime": "workspace:*",
+    "@grafana/schema": "workspace:*",
     "@grafana/ui": "workspace:*",
-    "lodash": "4.17.21",
-    "logfmt": "^1.3.2",
+    "debounce-promise": "3.1.2",
+    "lodash": "^4.17.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-select": "5.10.0",
-    "react-window": "1.8.11",
-    "rxjs": "7.8.1",
-    "stream-browserify": "3.0.0",
+    "react-select": "5.10.2",
+    "react-use": "17.6.0",
+    "rxjs": "7.8.2",
     "tslib": "2.8.1",
-    "uuid": "11.0.5"
+    "uuid": "11.1.0"
   },
   "devDependencies": {
+    "@grafana/e2e-selectors": "workspace:*",
     "@grafana/plugin-configs": "workspace:*",
-    "@testing-library/dom": "10.4.0",
-    "@testing-library/jest-dom": "6.6.3",
-    "@testing-library/react": "16.2.0",
+    "@testing-library/dom": "10.4.1",
+    "@testing-library/jest-dom": "6.6.4",
+    "@testing-library/react": "16.3.0",
     "@testing-library/user-event": "14.6.1",
+    "@types/debounce-promise": "3.1.9",
     "@types/jest": "29.5.14",
-    "@types/lodash": "4.17.15",
-    "@types/logfmt": "^1.2.3",
-    "@types/node": "22.12.0",
+    "@types/lodash": "4.17.20",
+    "@types/node": "24.10.1",
     "@types/react": "18.3.18",
     "@types/react-dom": "18.3.5",
-    "@types/react-window": "1.8.8",
     "@types/uuid": "10.0.0",
+    "jest": "29.7.0",
     "ts-node": "10.9.2",
-    "typescript": "5.7.3",
+    "typescript": "5.9.2",
     "webpack": "^5.105.0"
   },
   "peerDependencies": {
@@ -46,7 +44,9 @@
   "scripts": {
     "build": "webpack -c ./webpack.config.ts --env production",
     "build:commit": "webpack -c ./webpack.config.ts --env production --env commit=$(git rev-parse --short HEAD)",
-    "dev": "webpack -w -c ./webpack.config.ts --env development"
+    "dev": "webpack -w -c ./webpack.config.ts --env development",
+    "test": "jest --watch --onlyChanged",
+    "test:ci": "jest --maxWorkers 4"
   },
-  "packageManager": "yarn@4.6.0"
+  "packageManager": "yarn@4.11.0"
 }
