--- a/public/app/plugins/datasource/parca/package.json
+++ b/public/app/plugins/datasource/parca/package.json
@@ -28,7 +28,7 @@
     "@types/react-dom": "18.3.5",
     "ts-node": "10.9.2",
     "typescript": "5.7.3",
-    "webpack": "5.97.1"
+    "webpack": "^5.105.0"
   },
   "peerDependencies": {
     "@grafana/runtime": "*"
