--- a/packages/grafana-prometheus/package.json
+++ b/packages/grafana-prometheus/package.json
@@ -48,6 +48,7 @@
   "dependencies": {
     "@emotion/css": "11.13.5",
     "@floating-ui/react": "0.27.16",
+    "@grafana/assistant": "^0.1.14",
     "@grafana/data": "12.4.0-pre",
     "@grafana/e2e-selectors": "12.4.0-pre",
     "@grafana/i18n": "12.4.0-pre",
