--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "check-frontend-dev": "./scripts/check-frontend-dev.sh",
     "build": "NODE_ENV=production nx exec --verbose -- webpack --config scripts/webpack/webpack.prod.js",
-    "build:useReact18": "yarn run build -- --env useReact18=1 noMinify=1",
+    "build:react18": "yarn run build -- --env react18=1 noMinify=1",
     "build:nominify": "yarn run build -- --env noMinify=1",
     "build:stats": "NODE_ENV=production webpack --progress --config scripts/webpack/webpack.stats.js",
     "codeowners-manifest": "node ./scripts/codeowners-manifest/index.js",
