use different directory

--- a/conf/defaults.ini
+++ b/conf/defaults.ini
@@ -22,7 +22,7 @@ temp_data_lifetime = 24h
 # Directory where grafana can store logs
 logs = data/log
 
-# Comma separated list of directories where grafana will automatically scan and look for plugins
+# Directory where grafana will automatically scan and look for plugins
 plugins = data/plugins
 
 # folder that contains provisioning config files that grafana will apply on startup and while running.
