--- a/packages/grafana-plugin-configs/package.json
+++ b/packages/grafana-plugin-configs/package.json
@@ -20,8 +20,7 @@
     "swc-loader": "0.2.6",
     "typescript": "5.7.3",
     "webpack": "^5.105.0",
-    "webpack-bundle-analyzer": "^4.10.2",
-    "webpack-virtual-modules": "^0.6.2"
+    "webpack-bundle-analyzer": "^4.10.2"
   },
   "packageManager": "yarn@4.6.0"
 }
