--- a/packages/grafana-plugin-configs/package.json
+++ b/packages/grafana-plugin-configs/package.json
@@ -19,7 +19,7 @@
     "replace-in-file-webpack-plugin": "1.0.6",
     "swc-loader": "0.2.6",
     "typescript": "5.7.3",
-    "webpack": "5.97.1",
+    "webpack": "^5.105.1",
     "webpack-bundle-analyzer": "^4.10.2"
   },
   "packageManager": "yarn@4.6.0"
