--- a/public/app/plugins/datasource/zipkin/package.json
+++ b/public/app/plugins/datasource/zipkin/package.json
@@ -31,7 +31,7 @@
     "@types/react-dom": "18.3.5",
     "ts-node": "10.9.2",
     "typescript": "5.7.3",
-    "webpack": "5.97.1"
+    "webpack": "^5.105.1"
   },
   "peerDependencies": {
     "@grafana/runtime": "*"
