--- a/package.json
+++ b/package.json
@@ -277,7 +277,7 @@
     "@glideapps/glide-data-grid": "^6.0.0",
     "@grafana/alerting": "workspace:*",
     "@grafana/api-clients": "workspace:*",
-    "@grafana/assistant": "0.1.13",
+    "@grafana/assistant": "file:/Users/jcolladokuri/src/grafana-assistant-app/packages/@grafana/assistant",
     "@grafana/aws-sdk": "0.9.0",
     "@grafana/azure-sdk": "0.0.8",
     "@grafana/data": "workspace:*",
