add openfeature handling + local env to frontend-service

--- a/devenv/frontend-service/configs/nginx.conf
+++ b/devenv/frontend-service/configs/nginx.conf
@@ -105,6 +105,7 @@ server {
     proxy_set_header X-Real-IP         $remote_addr;
     proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header baggage "namespace=stacks-11";
   }
 }
 
