Upload lodash to 4.17.23

--- a/packages/grafana-runtime/package.json
+++ b/packages/grafana-runtime/package.json
@@ -43,7 +43,7 @@
     "@grafana/schema": "11.6.11",
     "@grafana/ui": "11.6.11",
     "history": "4.10.1",
-    "lodash": "4.17.21",
+    "lodash": "^4.17.23",
     "react-loading-skeleton": "3.5.0",
     "react-use": "17.6.0",
     "rxjs": "7.8.1",
@@ -64,7 +64,7 @@
     "@types/react-dom": "18.3.5",
     "@types/systemjs": "6.15.1",
     "esbuild": "0.25.0",
-    "lodash": "4.17.21",
+    "lodash": "^4.17.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "rimraf": "6.0.1",
