--- a/package.json
+++ b/package.json
@@ -349,7 +349,7 @@
     "jsurl": "^0.1.5",
     "kbar": "0.1.0-beta.45",
     "leven": "^4.0.0",
-    "lodash": "4.17.21",
+    "lodash": "^4.17.23",
     "logfmt": "^1.3.2",
     "lru-cache": "11.0.2",
     "lru-memoize": "^1.1.0",
