--- a/packages/grafana-data/package.json
+++ b/packages/grafana-data/package.json
@@ -45,7 +45,7 @@
     "eventemitter3": "5.0.1",
     "fast_array_intersect": "1.1.0",
     "history": "4.10.1",
-    "lodash": "4.17.21",
+    "lodash": "^4.17.23",
     "marked": "15.0.6",
     "marked-mangle": "1.1.10",
     "moment": "2.30.1",
