--- a/packages/grafana-flamegraph/package.json
+++ b/packages/grafana-flamegraph/package.json
@@ -48,7 +48,7 @@
     "@grafana/ui": "11.6.11",
     "@leeoniya/ufuzzy": "1.0.18",
     "d3": "^7.8.5",
-    "lodash": "4.17.21",
+    "lodash": "^4.17.23",
     "react": "18.3.1",
     "react-use": "17.6.0",
     "react-virtualized-auto-sizer": "1.0.25",
