--- a/packages/grafana-prometheus/package.json
+++ b/packages/grafana-prometheus/package.json
@@ -59,7 +59,7 @@
     "@types/semver": "7.5.8",
     "@types/uuid": "10.0.0",
     "debounce-promise": "3.1.2",
-    "lodash": "4.17.21",
+    "lodash": "^4.17.23",
     "moment": "2.30.1",
     "moment-timezone": "0.5.47",
     "monaco-promql": "1.7.4",
