--- a/packages/grafana-sql/package.json
+++ b/packages/grafana-sql/package.json
@@ -22,7 +22,7 @@
     "@grafana/ui": "11.6.11",
     "@react-awesome-query-builder/ui": "6.6.4",
     "immutable": "5.0.3",
-    "lodash": "4.17.21",
+    "lodash": "^4.17.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-select": "5.10.0",
