--- a/public/app/plugins/datasource/mysql/package.json
+++ b/public/app/plugins/datasource/mysql/package.json
@@ -10,7 +10,7 @@
     "@grafana/runtime": "11.6.11",
     "@grafana/sql": "11.6.11",
     "@grafana/ui": "11.6.11",
-    "lodash": "4.17.21",
+    "lodash": "^4.17.23",
     "react": "18.3.1",
     "rxjs": "7.8.1",
     "tslib": "2.8.1"
