--- a/public/app/plugins/datasource/parca/package.json
+++ b/public/app/plugins/datasource/parca/package.json
@@ -9,7 +9,7 @@
     "@grafana/runtime": "11.6.11",
     "@grafana/schema": "11.6.11",
     "@grafana/ui": "11.6.11",
-    "lodash": "4.17.21",
+    "lodash": "^4.17.23",
     "monaco-editor": "0.34.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
