--- a/public/app/plugins/datasource/tempo/package.json
+++ b/public/app/plugins/datasource/tempo/package.json
@@ -23,7 +23,7 @@
     "buffer": "6.0.3",
     "events": "3.3.0",
     "i18next": "^24.0.0",
-    "lodash": "4.17.21",
+    "lodash": "^4.17.23",
     "lru-cache": "11.0.2",
     "monaco-editor": "0.34.1",
     "prismjs": "1.30.0",
