--- a/public/app/plugins/datasource/zipkin/package.json
+++ b/public/app/plugins/datasource/zipkin/package.json
@@ -11,7 +11,7 @@
     "@grafana/plugin-ui": "0.10.1",
     "@grafana/runtime": "workspace:*",
     "@grafana/ui": "workspace:*",
-    "lodash": "4.17.21",
+    "lodash": "^4.17.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-select": "5.10.0",
