--- a/public/app/plugins/datasource/grafana-pyroscope-datasource/package.json
+++ b/public/app/plugins/datasource/grafana-pyroscope-datasource/package.json
@@ -10,7 +10,7 @@
     "@grafana/schema": "12.3.3",
     "@grafana/ui": "12.3.3",
     "fast-deep-equal": "^3.1.3",
-    "lodash": "4.17.21",
+    "lodash": "^4.17.23",
     "monaco-editor": "0.34.1",
     "prismjs": "1.30.0",
     "react": "18.3.1",
