--- a/public/app/plugins/datasource/graphite/package.json
+++ b/public/app/plugins/datasource/graphite/package.json
@@ -11,7 +11,7 @@
     "@grafana/schema": "12.3.3",
     "@grafana/ui": "12.3.3",
     "@reduxjs/toolkit": "2.9.0",
-    "lodash": "4.17.21",
+    "lodash": "^4.17.23",
     "moment": "2.30.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
