--- a/package.json
+++ b/package.json
@@ -256,7 +256,7 @@
     "ts-node": "10.9.2",
     "typescript": "5.9.2",
     "typescript-json-schema": "^0.65.1",
-    "webpack": "5.101.0",
+    "webpack": "^5.105.1",
     "webpack-assets-manifest": "^5.1.0",
     "webpack-cli": "6.0.1",
     "webpack-livereload-plugin": "3.0.2",
