--- a/packages/grafana-ui/package.json
+++ b/packages/grafana-ui/package.json
@@ -203,7 +203,7 @@
     "storybook": "^8.6.2",
     "style-loader": "4.0.0",
     "typescript": "5.9.2",
-    "webpack": "5.101.0"
+    "webpack": "^5.105.1"
   },
   "peerDependencies": {
     "react": "^18.0.0",
