--- a/public/app/plugins/datasource/grafana-postgresql-datasource/package.json
+++ b/public/app/plugins/datasource/grafana-postgresql-datasource/package.json
@@ -27,7 +27,7 @@
     "@types/react": "18.3.18",
     "ts-node": "10.9.2",
     "typescript": "5.8.3",
-    "webpack": "5.97.1"
+    "webpack": "^5.105.1"
   },
   "peerDependencies": {
     "@grafana/runtime": "*"
