--- a/package.json
+++ b/package.json
@@ -247,7 +247,7 @@
     "ts-jest": "29.4.0",
     "ts-node": "10.9.2",
     "typescript": "5.9.2",
-    "webpack": "5.101.0",
+    "webpack": "^5.105.1",
     "webpack-assets-manifest": "^5.1.0",
     "webpack-cli": "6.0.1",
     "webpack-livereload-plugin": "3.0.2",
